--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -195,6 +195,15 @@ a.sidebar-nav-item:focus {
   color: #f3abb6;
 }
 
+/* Ocean*/
+.theme-base-19 .sidebar {
+  background-image: linear-gradient(#0d5c75, #199fb1, #a5d1e1);
+}
+.theme-base-19 .content a,
+.theme-base-19 .related-posts li a:hover {
+  color: #f3abb6;
+}
+
 /* Orange */
 .theme-base-09 .sidebar {
   background-color: #d28445;
