--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -215,7 +215,7 @@ a.sidebar-nav-item:focus {
 
 /* Image*/
 .theme-base-18 .sidebar {
-  background-image:  url("https://github.com/huongdo108/huongdo108.github.io/blob/master/assets/images/9.jpg") ;
+  background-image:  url("assets/images/9.jpg") ;
 }
 .theme-base-18 .content a,
 .theme-base-18 .related-posts li a:hover {
