--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -216,6 +216,9 @@ a.sidebar-nav-item:focus {
 /* Image*/
 .theme-base-18 .sidebar {
   background-image:  url("assets/images/9.jpg") ;
+  background-size:     cover;                      /* <------ */
+  background-repeat:   no-repeat;
+  background-position: center center; 
 }
 .theme-base-18 .content a,
 .theme-base-18 .related-posts li a:hover {
