--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.url }}">Linkedin</a>
+      <a class="sidebar-nav-item" href="{{ site.linkedin.repo }}">Linkedin</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       
     </nav>
