--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="{{ site.linkedin.repo }}">Linkedin</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
       
     </nav>
 
