--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <div class="container sidebar-sticky">
+  <!-- <div class="container sidebar-sticky"> -->
     <div class="sidebar-about">
       <h1>
         <a href="{{ site.baseurl }}">
@@ -33,5 +33,5 @@
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
-  </div>
+  <!-- </div>-->
 </div>
