--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,7 @@
 
       <a class="sidebar-nav-item" href="{{ site.linkedin.repo }}">Linkedin</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
+      <a class="sidebar-nav-item" href="{{ site.certificate.repo }}">Certificate</a>
       
     </nav>
 
