--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,7 +31,8 @@
 
       <a class="sidebar-nav-item" href="{{ site.linkedin.repo }}">Linkedin</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
-      <a class="sidebar-nav-item" href="{{ site.certificate.repo }}">Certificate</a>
+      <a class="sidebar-nav-item" href="{{ site.certificate1.repo }}">Udacity Data Engineering Certificate</a>
+      <a class="sidebar-nav-item" href="{{ site.certificate2.repo }}">DataCamp Data Analyst - SQL Track Certificate</a>
       
     </nav>
 
